--- a/CursoSpring/src/main/resources/templates/index.html
+++ b/CursoSpring/src/main/resources/templates/index.html
@@ -1,12 +1,111 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Hola Mundo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hola Mundo</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Curso de Spring Boot</title>
+<link rel="stylesheet" href="../static/css/bootstrap.css"
+	th:href="@{/css/bootstrap.css}" />
+<script src="../static/js/bootstrap.bundle"
+	th:src="@{/js/bootstrap.bundle.js}"></script>
+<script src="../static/js/jquery-3.6.3.js"
+	th:src="@{/js/jquery-3.6.3.js}"></script>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Spring Boot</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarNav" aria-controls="navbarNav"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active"><a class="nav-link" th:href="@{/}"
+					href="#">Inicio <span class="sr-only">(current)</span>
+				</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Post</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="jumbotron">
+		<h1 class="display-4">Hello, world!</h1>
+		<p class="lead">This is a simple hero unit, a simple
+			jumbotron-style component for calling extra attention to featured
+			content or information.</p>
+		<hr class="my-4">
+		<p>It uses utility classes for typography and spacing to space
+			content out within the larger container.</p>
+		<a class="btn btn-primary btn-lg" href="#" role="button">Learn
+			more</a>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination justify-content-center">
+						<li class="page-item disabled"><a class="page-link">Previous</a>
+						</li>
+						<li class="page-item"><a class="page-link" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item"><a class="page-link" href="#">Next</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+
+		</div>
+	</div>
+</body>
 </html>
