--- a/CursoSpring/bin/src/main/resources/templates/index.html
+++ b/CursoSpring/bin/src/main/resources/templates/index.html
@@ -41,14 +41,50 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<!-- Cards -->
-			<div th:each="post : ${posts}"  class="col-3">
+			<div class="col-3">
 				<div class="card" style="width: 18rem;">
-					<img th:src="${post.urlImg}" src="../static/img/mario.jpg"
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
 						class="card-img-top" alt="...">
 					<div class="card-body">
-						<h5 th:text="${post.titulo}" class="card-title"></h5>
-						<p th:text="${post.descripcion}" class="card-text"></p>
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card" style="width: 18rem;">
+					<img th:src="@{/img/mario.jpg}" src="../static/img/mario.jpg"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the
+							card title and make up the bulk of the card's content.</p>
 						<a href="#" class="btn btn-primary">Go somewhere</a>
 					</div>
 				</div>
